# PyPSA-GB

./: .env  .env.example  .gitignore  .readthedocs.yaml  5a - LOPF Historical-IAS.ipynb  5c - LOPF Future - Floating Wind & Marine.ipynb  EV_MODEL_DEEP_DIVE.md  LICENSE  LOPF.py  README.md  RELEASE_CHECKLIST.md  Sectoral Marine Plan 2020 - Fixed.csv  Sectoral Marine Plan 2020 - Floating.csv  Snakefile  Snakefile_cutouts  Snakefile_market  WORKFLOW_REFACTOR_PLAN.md  analyze_fes_bbs.py  analyze_network.py  check_demand.py  check_demand_scaling.py  check_fes_deep.py  check_fes_demand.py  check_final_network.py  check_flexibility_network.py  check_full_network.py  check_ht35_flex.py  check_interconnectors_network.py  check_load_carriers.py  data_reader_writer.py  diagnose_ev_go.py  diagnose_ls.py  diagnose_network.py  emissions_intensity_by_types.csv  ev_patterns.py  generators.py  jupytext.toml  prototype_emissions.csv  pyproject.toml  pytest.ini  (+2 more)
PyPSA-GB/: 1 - Network.ipynb  2 - Demand.ipynb  3 - Generator and Marginal Prices.ipynb  5a - LOPF Historical.ipynb  5b - LOPF Future.ipynb  7 - Network Expansion.ipynb  EI_by_node.csv  EI_gCO2.csv  EI_gCO2_ex_int.csv  E_by_node.csv  Emit_by_type_te.csv  LOPF.pickle  LOPF.py  Onshore_Wind_Curtailment_Scotland_2030.csv  Onshore_Wind_Curtailment_Scotland_2035.csv  Onshore_Wind_Curtailment_Scotland_2040.csv  UC.py  add_P2G.py  allocate_to_zone.py  buses.py  data_reader_writer.py  data_reader_writer_zonetest.py  demand_zones.py  distance_calculator.py  distribution.py  emis_by_bus_te.csv  energy_centre.py  engineering_lab.ipynb  lines.py  (+35 more)
(+1596 files in other folders)
